2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for most elements up to |progress|.
	($HTMLURIAttrChecker): Placeholder.
	($HTMLIntegerAttrChecker, $GetHTMLFloatingPointNumberAttrChecker):
	New.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Attribute checkers 
	for global attributes, |html|, |base|, |style|, and |meta|.

	* NanoDOM.pm (insert_before): Weaken reference
	to the parent node.
	(Attr::new): Set |owner_element| attribute.
	(namespace_uri, manakai_local_name): New attribute implementations.
	(owner_element): New attribute.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($AttrChecker, $HTMLAttrChecker,
	$AnyChecker->{attr_checker}, $HTMLAttrsChecker,
	$Element->{$HTML_NS}->{''}): New.
	(check_element): Invoke attrs_checker for each element.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Don't use |manakai_element_type_match|.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Use hashs rather than lists for
	element type testings.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Don't generate duplicate
	error when an element type is put in the "minus" list
	and the element type is not allowed explicitly in the particular
	element content model.
	(html:a checker): New checker.
	(html:details, html:datagrid): New checkers.
	(html:legend): New checker.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (html:li checker): Implemented.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLInlineOrStriclyInlineChecker): New
	checker.
	(html:dd checker): New checker.
	(html:q, html:em, html:strong, html:small,
	html:m, html:dfn, html:code, html:samp, html:span): New checkers.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($AnyChecker): Renamed
	from |$ElementDefault->{checker}|.
	($ElementDefault->{checker}): Throw an error that 
	the element type is not supported by the checker.