@@ -11,6 +11,7 @@
 #data
 <p xmlns="http://www.w3.org/1999/xhtml"><unknown/></p>
 #errors
+/p/unknown;element not allowed
 /p/unknown;element not supported
 
 #data
