@@ -1,5 +1,14 @@
 2007-05-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat: A content model conformance
+	error was missing.
+
+	* content-model-2.dat: Unsupported global attribute (prefixed
+	attribute) test is added.  Tests for many HTML5 elements
+	are added.
+
+2007-05-19  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-2.dat: Tests for elements up to |progress|.
 
 2007-05-19  Wakaba  <wakaba@suika.fam.cx>
