@@ -1,5 +1,10 @@
 2007-05-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm: Support for many of HTML5 elements.
+	($GetHTMLNonNegativeIntegerAttrChecker): New.
+
+2007-05-19  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: Support for most elements up to |progress|.
 	($HTMLURIAttrChecker): Placeholder.
 	($HTMLIntegerAttrChecker, $GetHTMLFloatingPointNumberAttrChecker):
